Draw a circle around region

--- a/googleGeofence/Base.lproj/Main.storyboard
+++ b/googleGeofence/Base.lproj/Main.storyboard
@@ -63,6 +63,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="cra-N8-TIN"/>
+                    <connections>
+                        <outlet property="map" destination="boY-4b-jgx" id="8sq-4m-580"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
             </objects>
